<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#efc88b"
    app:cardCornerRadius="30dp"
    android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/uc" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewDesc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/description"
                    android:gravity="center"
                    style="@style/textStyle"/>

                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:layout_gravity="end"
                    android:layout_margin="15dp"
                    android:textSize="18sp"
                    android:textColor="#000529"
                    />

            </FrameLayout>

            <Button
                android:id="@+id/button"
                style="@style/textStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#fff3b0"
                android:text="@string/buy" />
        </LinearLayout>

</androidx.cardview.widget.CardView>